--- a/scss/base/_container.scss
+++ b/scss/base/_container.scss
@@ -1,9 +1,26 @@
 .container {
-    width: 1200px;
+    /* outline: 2px solid teal; */
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
 
-    /* outline: 2px solid teal; */
+    // mobile screen from 480px
+
+    @include mq (mobile) {
+        width: 480px;
+    }
+
+    // tablet
+
+    @include mq (tablet) {
+        width: 768px;
+    }
+
+    // desktop
+
+    @include mq (desktop) {
+        width: 1200px;
+    }   
+
 }
