--- a/scss/layouts/_subtitle.scss
+++ b/scss/layouts/_subtitle.scss
@@ -3,28 +3,57 @@
 
 /* flex  subtitle*/
 
+.subtitle {
+    @include mq (not-desktop) {
+        display: none;
+    }
+}  
+
 .thumbnail {
-    display: flex;
-    flex-wrap: wrap;
+    @include mq (mobile) {
+            display: none;
+        }
+}
+
+@include mq (desktop) {
+    .thumbnail {
+        display: flex;
+        flex-wrap: wrap;
+    }
 }
 
 .thumbnail__item {
+    @include mq (mobile) {
+            display: none;
+        }
+}
 
-    width: 370px;
-    margin-right: 30px;
+@include mq (desktop) {
+    .thumbnail__item {
 
-    &:nth-child(3n) {
+        width: 370px;
+        margin-right: 30px;
+
+        &:nth-child(3n) {
             margin-right: 0;
         }
+    }
 }
 
 /* Позиційовані елементи */
 
 .thumbnail__box {
-    position: relative;
-    display: block;
+    @include mq (mobile) {
+            display: none;
+        }
+}
 
-    &::before {
+@include mq (desktop) {
+    .thumbnail__box {
+        position: relative;
+        display: block;
+
+        &::before {
             position: absolute;
     
             bottom: 0;
@@ -40,35 +69,44 @@
     
         }
 
+    }
 }
 
 .thumbnail__text {
-    position: absolute;
+    @include mq (mobile-only) {
+            display: none;
+        }
+}
 
-    bottom: 0;
-    right: 0;
+@include mq (desktop) {
+    .thumbnail__text {
+        position: absolute;
 
-    margin: 0;
+        bottom: 0;
+        right: 0;
 
-    text-align: center;
-    font-family: Roboto;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: calc(16 / 14);
-    letter-spacing: 0.42px;
-    text-transform: uppercase;
-    color: var(--action-white-color);
+        margin: 0;
 
-    &--mobile {
-            transform: translate(-107px, -27px);
+        text-align: center;
+        font-family: Roboto;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: calc(16 / 14);
+        letter-spacing: 0.42px;
+        text-transform: uppercase;
+        color: var(--action-white-color);
+
+        &--mobile {
+        transform: translate(-107px, -27px);
         }
     
-    &--desktop {
-            transform: translate(-113px, -27px);
+        &--desktop {
+        transform: translate(-113px, -27px);
         }
     
-    &--design {
-            transform: translate(-95px, -27px);
+        &--design {
+        transform: translate(-95px, -27px);
         }
+    }
 }
