--- a/scss/layouts/_hero.scss
+++ b/scss/layouts/_hero.scss
@@ -1,14 +1,13 @@
 /* hero */
-
-
 .hero {
+    display: block;
     text-align: center;
-    padding-top: 200px;
-    padding-bottom: 200px;
+    padding-top: 118px;
+    padding-bottom: 198px;
     background-color: #C4C4C4;
 
-    width: 1600px;
-    height: 600px;
+    width: 480px;
+    height: 400px;
     margin-left: auto;
     margin-right: auto;
     background-image:
@@ -20,23 +19,81 @@
     background-position: center;
     background-size: cover;
 
-    
+    @include mq (tablet) {
+        display: block;
+        text-align: center;
+        padding-top: 118px;
+        padding-bottom: 198px;
+        background-color: #C4C4C4;
+
+        width: 768px;
+        height: 400px;
+        margin-left: auto;
+        margin-right: auto;
+        background-image:
+            linear-gradient(to right,
+                rgba(47, 48, 58, 0.40),
+                rgba(2, 2, 61, 0.4)),
+            url(../images/img\(16\).jpg);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+    }
+
+    @include mq (desktop) {
+        display: block;
+        text-align: center;
+        padding-top: 200px;
+        padding-bottom: 280px;
+        background-color: #C4C4C4;
+
+        width: 1600px;
+        height: 600px;
+        margin-left: auto;
+        margin-right: auto;
+        background-image:
+            linear-gradient(to right,
+                rgba(47, 48, 58, 0.40),
+                rgba(2, 2, 61, 0.4)),
+            url(../images/img\(16\).jpg);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+    }
 }
 
 .hero-titel {
-    width: 696px;
+        width: 360px;
 
-    margin-left: auto;
-    margin-right: auto;
+        margin-left: auto;
+        margin-right: auto;
 
-    margin-top: 0;
-    margin-bottom: 30px;
+        margin-top: 0;
+        margin-bottom: 30px;
 
-    font-weight: 900;
-    font-size: 44px;
-    line-height: calc(60 / 44);
+        font-weight: 900;
+        font-size: 26px;
+        line-height: calc(60 / 44);
 
-    color: var(--action-white-color);
+        color: var(--action-white-color);
+
+
+    @include mq (desktop) {
+    
+        width: 696px;
+
+        margin-left: auto;
+        margin-right: auto;
+
+        margin-top: 0;
+        margin-bottom: 30px;
+
+        font-weight: 900;
+        font-size: 44px;
+        line-height: calc(60 / 44);
+
+        color: var(--action-white-color);
+    }
 }
 
 
