--- a/scss/layouts/_page.scss
+++ b/scss/layouts/_page.scss
@@ -11,12 +11,22 @@
 }
 
 .page-thumb__item {
-    width: 270px;
-    margin-right: 30px;
+    @include mq (mobile-only) {
+        width: 450px;
 
-    &:nth-child(4n) {
-            margin-right: 0;
-        }
+        &:nth-child(4n) {
+                margin-right: 0;
+            }
+    }
+     
+    @include mq (desktop) {
+        width: 270px;
+        margin-right: 30px;
+
+        &:nth-child(4n) {
+                margin-right: 0;
+            }
+    }
 }
 
 
