--- a/scss/layouts/_subtitle.scss
+++ b/scss/layouts/_subtitle.scss
@@ -3,110 +3,79 @@
 
 /* flex  subtitle*/
 
-.subtitle {
+.section__subtitle {
     @include mq (not-desktop) {
         display: none;
     }
 }  
 
-.thumbnail {
-    @include mq (mobile) {
-            display: none;
-        }
-}
 
-@include mq (desktop) {
-    .thumbnail {
-        display: flex;
-        flex-wrap: wrap;
-    }
+.thumbnail {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .thumbnail__item {
-    @include mq (mobile) {
-            display: none;
-        }
-}
 
-@include mq (desktop) {
-    .thumbnail__item {
+    width: 370px;
+    margin-right: 30px;
 
-        width: 370px;
-        margin-right: 30px;
-
-        &:nth-child(3n) {
-            margin-right: 0;
-        }
+    &:nth-child(3n) {
+        margin-right: 0;
     }
 }
-
-/* Позиційовані елементи */
 
 .thumbnail__box {
-    @include mq (mobile) {
-            display: none;
-        }
-}
+    position: relative;
+    display: block;
 
-@include mq (desktop) {
-    .thumbnail__box {
-        position: relative;
-        display: block;
-
-        &::before {
-            position: absolute;
-    
-            bottom: 0;
-            right: 0;
-    
-            content: '';
-            display: block;
-    
-            width: 370px;
-            height: 70px;
-    
-            background: rgba(47, 48, 58, 0.80);
-    
-        }
-
-    }
-}
-
-.thumbnail__text {
-    @include mq (mobile-only) {
-            display: none;
-        }
-}
-
-@include mq (desktop) {
-    .thumbnail__text {
+    &::before {
         position: absolute;
-
+    
         bottom: 0;
         right: 0;
-
-        margin: 0;
-
-        text-align: center;
-        font-family: Roboto;
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: calc(16 / 14);
-        letter-spacing: 0.42px;
-        text-transform: uppercase;
-        color: var(--action-white-color);
-
-        &--mobile {
-        transform: translate(-107px, -27px);
-        }
     
-        &--desktop {
-        transform: translate(-113px, -27px);
-        }
+        content: '';
+        display: block;
     
-        &--design {
-        transform: translate(-95px, -27px);
-        }
+        width: 370px;
+        height: 70px;
+    
+        background: rgba(47, 48, 58, 0.80);
+    
+    }
+
+}
+
+
+
+.thumbnail__text {
+    position: absolute;
+
+    bottom: 0;
+    right: 0;
+
+    margin: 0;
+
+    text-align: center;
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: calc(16 / 14);
+    letter-spacing: 0.42px;
+    text-transform: uppercase;
+    color: var(--action-white-color);
+
+    &--mobile {
+    transform: translate(-107px, -27px);
+    }
+    
+    &--desktop {
+    transform: translate(-113px, -27px);
+    }
+    
+    &--design {
+    transform: translate(-95px, -27px);
     }
 }
