--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,6 +15,7 @@
 @import './components/modal';
 @import './components/modal-form';
 @import './components/filter';
+@import './components/mobai-menu';
 
 
 // layouts
