--- a/scss/base/_common.scss
+++ b/scss/base/_common.scss
@@ -41,7 +41,21 @@ body {
 }
 
 .subtitle__title {
-    @include mq (mobile) {
+    @include mq (mobile-only) {
+        margin-top: 0;
+        margin-bottom: 30px;
+
+        font-weight: 700;
+        font-size: 36px;
+        line-height: calc(42 / 36);
+        letter-spacing: 0.03em;
+
+        color: var(--secondary-text-color);
+        text-align: center;
+        z-index: 1;
+    }
+
+    @include mq (tablet) {
         margin-top: 0;
         margin-bottom: 30px;
 
